2006-02-15  Lillian Angel  <langel@redhat.com>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c:
	Removed duplicate methods.

2006-02-15  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/JTable.java (distributeSpillResizing): New method.
	(doLayout): Use distributeSpillResizing when resizing.
	* javax/swing/plaf/basic/BasicTableHeaderUI.java (MouseInputHandler):
	Rewritten. (installListeners): Add mouse motion listener. 
	(uninstallListeners): Remove mouse motion listener. 

2006-02-15  Lillian Angel  <langel@redhat.com>

	* gnu/java/awt/peer/gtk/GtkDialogPeer.java
	(setVisible): Removed method.
	* gnu/java/awt/peer/gtk/GtkWindowPeer.java
	(setLocation): New method.
	(setLocationUnlocked): New method.
	(show): Changed to use setLocation instead of setBounds.
	* java/awt/Component.java
	(show): Should call peer.show(), not peer.setVisible(), so the
	location of the component is correctly set.
	(preferredSize): Added curly braces so else statements are
	properly associated with if's.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c
	(Java_gnu_java_awt_peer_gtk_GtkWindowPeer_nativeSetLocation): 
	New function.
	(Java_gnu_java_awt_peer_gtk_GtkWindowPeer_nativeSet
	LocationUnlocked): New function.
	* include/gnu_java_awt_peer_gtk_GtkWindowPeer.h:
	Added declarations for Java_gnu_java_awt_peer_gtk_
	GtkWindowPeer_nativeSetLocation and 
	Java_gnu_java_awt_peer_gtk_GtkWindowPeer
	_nativeSetLocationUnlocked.

2006-02-15  Mark Wielaard  <mark@klomp.org>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkEmbeddedWindowPeer.c
	(Java_gnu_java_awt_peer_gtk_GtkEmbeddedWindowPeer_create):
	Downcast gtk_plug_new result when used.

2006-02-15  Olivier Jolly  <olivier.jolly@pcedev.com>

	* java/io/ObjectOutputStream.java (writeClassDescriptor):
	Call assignNewHandle() after writing Proxy class.

2006-02-15  Olivier jolly  <olivier.jolly@pcedev.com>

	Fixes bug #14144
	* java/io/ObjectInputStream.java (readClassDescriptor):