@@ -1,3 +1,9 @@
+2006-02-15  Audrius Meskauskas  <AudriusA@Bioinformatics.org>
+
+	* javax/swing/JTable.java,
+	javax/swing/plaf/basic/BasicTableHeaderUI.java,
+	javax/swing/table/DefaultTableModel.java: Documented.
+
 2006-02-15  Lillian Angel  <langel@redhat.com>
 
 	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c:
